-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.5.0
-
None
-
Windows 10, Android for ARM, Android SDK Version: 26.1.1, NDK Version: 10.4.0
When running an Android project in Qt Creator the emulator does not start up automatically. It also does not start when selecting start for an emulator in the settings.
Reproduction
- Open Qt Creator
- Open your Android project
- Run it
- Select your virtual device
or
- Open Qt Creator
- Go to Tools - Options - Devices
- Select your virtual device from the list of AVDs
- Click start
Observed result
The emulator does not start