Android: Check for missing emulator tool

Task-number: QTCREATORBUG-20160
Change-Id: I481adfe9a7a1b2c9c151d01d2fe1b010735c898b
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
Reviewed-by: hjk <hjk@qt.io>